# nlp_lyf

冯少波/week13/: task1.md
冯少波/week15/: task2.md
凌云杰/week14/: 作业1_本地知识库问答.py  作业2_股票波动可视化.py
凌云杰/week15/: 作业1_多模态RAG聊天机器人.md  作业2_MinerU与pdfplumber对比分析.md
李雨峰/week15/: README.md  mineru_vs_pdfplumber.md  requirements.txt
林冀蓬/week13/: DeepSeekV2vsV3.xlsx
陆逸凡/week17/redis-vl-vibecoding/: CLAUDE.md  README.md  pyproject.toml  setup.py  输出.txt  运行.md
陆逸凡/week17/redis-vl-vibecoding/manual_test/: test1.py
陆逸凡/week17/redis-vl-vibecoding/tests/: conftest.py  test_config.py  test_utils.py
陆逸凡/week17/redis-vl-vibecoding/tests/cache/: test_embeddings_cache.py  test_semantic_cache.py
陆逸凡/week17/redis-vl-vibecoding/tests/core/: test_schema.py  test_search.py
陆逸凡/week17/redis-vl-vibecoding/tests/embedding/: test_factory.py
陆逸凡/week17/redis-vl-vibecoding/tests/memory/: test_semantic_history.py
陆逸凡/week17/redis-vl-vibecoding/tests/routing/: test_semantic_router.py
陆逸凡/week17/redis-vl-vibecoding/vecstore/: __init__.py  config.py  errors.py  types.py
陆逸凡/week17/redis-vl-vibecoding/vecstore.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
陆逸凡/week17/redis-vl-vibecoding/vecstore/cache/: __init__.py  embeddings_cache.py  semantic_cache.py
陆逸凡/week17/redis-vl-vibecoding/vecstore/core/: __init__.py  connection.py  schema.py  search.py
陆逸凡/week17/redis-vl-vibecoding/vecstore/embedding/: __init__.py  base.py  factory.py  openai_provider.py  sentence_provider.py
陆逸凡/week17/redis-vl-vibecoding/vecstore/memory/: __init__.py  semantic_history.py
陆逸凡/week17/redis-vl-vibecoding/vecstore/routing/: __init__.py  route.py  semantic_router.py
陆逸凡/week17/redis-vl-vibecoding/vecstore/utils/: __init__.py  hash_utils.py  serializer.py  vector_utils.py
(+275 files in other folders)
